--- a/shelter/src/style/_general.scss
+++ b/shelter/src/style/_general.scss
@@ -432,6 +432,10 @@ footer {
     & .wrapper{
         padding-top: 40px;
         padding-bottom: 0;
+
+        @media (max-width: $max-tablet-width) {
+            padding-top: 30px;
+        }
     }
 }
 .footer-content {
@@ -445,6 +449,7 @@ footer {
         & h3 {
             color: var(--color-light-xl);
             @include font-h3();
+            max-width: 280px;
         }
         & .icon-text{
             margin-top: 40px;
@@ -452,6 +457,9 @@ footer {
             align-items: center;
             &_place {
                 margin-top: 32px;
+                @media (max-width: $max-mobile-width) {
+                    margin-top: 40px;
+                }
             }
 
             & p {
@@ -469,6 +477,7 @@ footer {
     @media (max-width: $max-tablet-width) {
         flex-wrap: wrap;
         justify-content: space-around;
+        column-gap: 0;
         & .footer-info {
             margin: 0;
         }
@@ -476,8 +485,14 @@ footer {
     @media (max-width: $max-mobile-width) {
         row-gap: 40px;
         & .footer-info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             & h3 {
                 text-align: center;
+            }
+            & .icon-text_place{
+                width: 100%;
             }
         }
         & .footer-img {
