--- a/shelter/src/style/style.scss
+++ b/shelter/src/style/style.scss
@@ -17,6 +17,9 @@
     
     @media (max-width: $min-desktop-width) {
         height: 1165px;
+        & .wrapper {
+            padding-top: 151px;
+        }
     }
     @media (max-width: $max-mobile-width) {
         height: 823px;
@@ -38,18 +41,11 @@
         & h1 {
             color: var(--color-light-xl);
             @include font-h2();
-            @media (max-width: $max-mobile-width) {
-                @include font-h3();
-                text-align: center;
-            }
         }
         & p {
             color: var(--color-dark-s);
             @include font-paragraph-l();
             margin: 42px 0;
-            @media (max-width: $max-mobile-width) {
-                text-align: center;
-            }
         }
         & .button-rectangle-primary {
             align-self: flex-start;
@@ -65,12 +61,26 @@
         flex-direction: column;
         & .hero-banner-text {
             width: 100%;
+            max-width: calc(100vw - 308px);
+            margin-bottom: 100px;
             & .button-rectangle-primary {
                 align-self: center;
             }
         }
         & .hero-banner-img {
             height: 593px;
+        }
+    }
+    @media (max-width: $max-mobile-width) {
+        & .hero-banner-text {
+            max-width: 100%;
+            & h1 {
+                @include font-h3();
+                text-align: center;
+            }
+            & p {
+                text-align: center;
+            }
         }
     }
 
@@ -107,6 +117,9 @@
 
     @media (max-width: $min-desktop-width) {
         flex-direction: column-reverse;
+        & .about-text {     
+            width: calc(100vw - 338px);
+        }
     }
     @media (max-width: $max-mobile-width) {
         row-gap: 42px;        
@@ -120,6 +133,9 @@
                 margin-left: 15px;
                 margin-right: 15px;
                 text-align: justify;
+                &:last-child {
+                    margin-top: 22px;
+                }
             }
         }
         & .about-img {
@@ -148,7 +164,6 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    row-gap: 60px;
     & h3 {
         color: var(--color-dark-l);
         @include font-h3();
@@ -158,7 +173,8 @@
         display: flex;
         justify-content: space-between;
         width: 100%;
-        align-items: center;        
+        align-items: center;
+        margin: 60px 0;        
         & .button-round {
             flex-shrink:0;
         }
@@ -177,8 +193,8 @@
         }
     }
     @media (max-width: $max-mobile-width) {
-        row-gap: 42px;
-        & .carousel-wrapper {         
+        & .carousel-wrapper {   
+            margin: 42px 0;      
             flex-wrap: wrap;
             justify-content: space-around;
             row-gap: 20px;
@@ -203,11 +219,15 @@
         text-align: center;
     }
     & .grid-conteiner {
+        margin: 60px 0; 
         display: grid;
         grid-template-columns: repeat(4,1fr);
         justify-items: center;
         grid-gap: 30px 40px;
         @media (max-width: $max-tablet-width) {
+            margin: 30px 0 40px;
+            padding: 0 64px;
+            width: 100%;
             grid-template-columns: repeat(3,1fr);
             grid-template-rows: repeat(2, 435px);
             grid-auto-rows: 0;
@@ -219,6 +239,8 @@
             height: 1365px;
         }
         @media (max-width: $min-tablet-width) {
+            margin: 42px 0;
+            padding: 0;
             grid-template-columns: repeat(1,1fr);
         }
 
@@ -229,8 +251,12 @@
         align-items: center;
         justify-content: center;
         column-gap: 20px;
+        @media (max-width: $max-tablet-width) {
+            margin-bottom: -30px;
+        }
         @media (max-width: $min-tablet-width) {
             column-gap: 10px;
+            margin-bottom: 0;
         }
     }
 }
@@ -272,7 +298,7 @@
         @media (max-width: $max-tablet-width) {
             justify-content: space-around;
             gap: 55px 60px;
-            padding: 0;
+            padding: 0 25px;
             & .help-item {
                 width: 170px;
             }            
@@ -286,8 +312,13 @@
             gap: 30px 30px;
             & .help-item {
                 width: 130px;
+                & > img {
+                    width: 50px;
+                    height: 50px;
+                }
                 & p {
                     @include font-h5();
+                    margin-top: 20px;
                 }
             }   
         }
@@ -345,6 +376,9 @@
 
     @media (max-width: $min-desktop-width) {
         flex-direction: column-reverse;
+        & .donation-text {     
+            width: calc(100vw - 388px);
+        }
     }
     @media (max-width: $max-mobile-width) {
         row-gap: 42px;
