--- a/shelter/src/style/style.css
+++ b/shelter/src/style/style.css
@@ -621,6 +621,7 @@ body._lock {
 .header-main {
   width: 100%;
   position: fixed;
+  z-index: 50;
   transition: all 0.5s ease-out;
 }
 .header-main .wrapper {
@@ -1090,21 +1091,46 @@ footer .wrapper {
 .ourFriends-content .carousel-wrapper .button-round {
   flex-shrink: 0;
 }
-.ourFriends-content .carousel-wrapper .carousel-items-conteiner {
-  display: flex;
+.ourFriends-content .carousel-wrapper .carousel-items-wrapper {
+  width: 100%;
   overflow: hidden;
   margin: 0 53px;
-  -moz-column-gap: 90px;
-       column-gap: 90px;
 }
-.ourFriends-content .carousel-wrapper .carousel-items-conteiner .card-mini {
+.ourFriends-content .carousel-wrapper .carousel-items-wrapper .carousel-items-conteiner {
+  display: flex;
+  position: relative;
+  left: calc(290px - 100vw);
+}
+.ourFriends-content .carousel-wrapper .carousel-items-wrapper .carousel-items-conteiner .carousel-slide {
+  display: flex;
+  justify-content: space-between;
+  width: calc(100vw - 290px);
+  -moz-column-gap: 10px;
+       column-gap: 10px;
   flex-shrink: 0;
+  transition: all 1s;
 }
 @media (max-width: 960px) {
-  .ourFriends-content .carousel-wrapper .carousel-items-conteiner {
-    margin: 0 12px;
-    -moz-column-gap: 40px;
-         column-gap: 40px;
+  .ourFriends-content .carousel-wrapper .carousel-items-wrapper .carousel-items-conteiner {
+    left: calc(270px - 100vw);
+  }
+  .ourFriends-content .carousel-wrapper .carousel-items-wrapper .carousel-items-conteiner .carousel-slide {
+    width: calc(100vw - 270px);
+  }
+  .ourFriends-content .carousel-wrapper .carousel-items-wrapper .carousel-items-conteiner .carousel-slide .card-mini:first-child {
+    display: none;
+  }
+}
+@media (max-width: 767px) {
+  .ourFriends-content .carousel-wrapper .carousel-items-wrapper .carousel-items-conteiner {
+    left: -100%;
+  }
+  .ourFriends-content .carousel-wrapper .carousel-items-wrapper .carousel-items-conteiner .carousel-slide {
+    justify-content: center;
+    width: 100%;
+  }
+  .ourFriends-content .carousel-wrapper .carousel-items-wrapper .carousel-items-conteiner .carousel-slide .card-mini:last-child {
+    display: none;
   }
 }
 @media (max-width: 767px) {
@@ -1117,9 +1143,10 @@ footer .wrapper {
   .ourFriends-content .carousel-wrapper .button-round {
     order: 2;
   }
-  .ourFriends-content .carousel-wrapper .carousel-items-conteiner {
+  .ourFriends-content .carousel-wrapper .carousel-items-wrapper {
     order: 1;
     width: 100%;
+    margin: 0;
   }
 }
 .ourFriends-content h1 {
@@ -1388,5 +1415,83 @@ footer .wrapper {
     width: calc(100vw - 60px);
     height: 42.1875vw;
     background-position: center;
+  }
+}
+
+@keyframes move-left-desk {
+  from {
+    left: calc(290px - 100vw);
+  }
+  to {
+    left: calc((290px - 100vw) * 2);
+  }
+}
+@keyframes move-left-tablet {
+  from {
+    left: calc(270px - 100vw);
+  }
+  to {
+    left: calc((270px - 100vw) * 2);
+  }
+}
+@keyframes move-left-mobile {
+  from {
+    left: calc(26px - 100vw);
+  }
+  to {
+    left: calc((26px - 100vw) * 2);
+  }
+}
+.transition-left {
+  animation-name: move-left-desk;
+  animation-duration: 1.5s;
+}
+@media (max-width: 960px) {
+  .transition-left {
+    animation-name: move-left-tablet;
+  }
+}
+@media (max-width: 767px) {
+  .transition-left {
+    animation-name: move-left-mobile;
+  }
+}
+
+@keyframes move-right-desk {
+  from {
+    left: calc(290px - 100vw);
+  }
+  to {
+    left: 0px;
+  }
+}
+@keyframes move-right-tablet {
+  from {
+    left: calc(270px - 100vw);
+  }
+  to {
+    left: 0px;
+  }
+}
+@keyframes move-right-mobile {
+  from {
+    left: calc(26px - 100vw);
+  }
+  to {
+    left: 0px;
+  }
+}
+.transition-right {
+  animation-name: move-right-desk;
+  animation-duration: 1.5s;
+}
+@media (max-width: 960px) {
+  .transition-right {
+    animation-name: move-right-tablet;
+  }
+}
+@media (max-width: 767px) {
+  .transition-right {
+    animation-name: move-right-mobile;
   }
 }
