--- a/minesweeper/src/styles.scss
+++ b/minesweeper/src/styles.scss
@@ -6,8 +6,32 @@ body {
 }
 
 .wrapper {
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    min-height: 100vh;
     background: rgba(75, 207, 158, 0.5);
+}
+
+.playzone {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    row-gap: 56px;
+    padding: 64px;
+
+    height: 100%;
+
+    &__title {
+        font-family: 'Roboto';
+        font-weight: 700;
+        font-size: 96px;
+        line-height: 112px;
+
+        padding: 8px;
+        color: rgba(255, 216, 76, 0.1);
+        
+        background: url('./assets/Minesweeper.png') 0 0/cover  no-repeat;
+    }
+
 }
 
