feat: implement toggle theme & meny

--- a/minesweeper/src/components/cell/styles.scss
+++ b/minesweeper/src/components/cell/styles.scss
@@ -6,10 +6,12 @@
   align-items: center;
   justify-content: center;
 
-  width: 32px;
-  height: 32px;
+  width: 24px;
+  height: 24px;
   
   border-radius: $br-m;
+
+  cursor: pointer;
 
   &_close {
     background: url('../../assets/cross.png') 50% 50%/cover  no-repeat, $color-gradient;
