--- a/minesweeper/src/components/results/styles.scss
+++ b/minesweeper/src/components/results/styles.scss
@@ -2,6 +2,10 @@
 
 
 .results {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  
   width: 100%;
   @include text-m;
 
@@ -35,7 +39,4 @@
     }
 
   }
-
-
-
 }
