--- a/minesweeper/src/components/createField/styles.scss
+++ b/minesweeper/src/components/createField/styles.scss
@@ -4,6 +4,7 @@
 .area {
   display: flex;
   flex-direction: column;
+  align-items: center;
   row-gap: 32px;
 }
 
@@ -13,6 +14,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  max-width: calc(100vw - 32px) ;
   background-color: $color-dark-10;
   border-radius: $br-l;
 
@@ -57,5 +59,18 @@
   &__line {
     display: flex;
     column-gap: 2px;
+  }
+}
+
+.area_light {
+  .stat-bar {
+    background-color: $color-light-50;
+    &__item {
+      background-color: $color-light-20;  
+    }
+
+  }
+  .field {
+    background-color: $color-light-80;
   }
 }
