--- a/minesweeper/src/components/menu/styles.scss
+++ b/minesweeper/src/components/menu/styles.scss
@@ -3,12 +3,82 @@
 .menu {
   position: fixed;
   left: 0;
-  top: 0;
-  bottom: 0;
+  top: 0;  
+  z-index: 1000;
 
+  display: flex;
+  flex-direction: column;
+
+  height: 100vh;
   width: 360px;
   padding: 16px;
+  overflow-y: auto;
 
   background-color: $color-dark-10;
   color: $color-light-50;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: $color-dark-50;
+  }
+
+  &__separator {
+    border: 2px solid $color-dark-50;
+    opacity: 0.8;
+    margin: 16px;
+  }
+
+
+  &__top-bar {
+    margin-bottom: 64px;
+  }
+  &__results {
+    margin-top: 64px;
+    flex-grow:1;
+  }
+
+
+  @media (max-width: $bp-20) {
+    display: none;
+    width: 100%;
+    &_open {
+      display: flex;
+    }
+  }
+
+  &_light {
+    background-color: $color-light-50;
+    color: $color-dark-10;
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $color-light-20;
+    }
+
+    .menu__separator {
+      border: 2px solid $color-light-20;
+    }
+
+    .text-btn {
+      color: $color-dark-10;
+    }
+
+    .results {
+      &__item{
+        color: $color-light-20;
+      }
+      & svg {
+        fill: $color-light-20;
+      }
+    }
+
+    .top-bar{
+      &__icon {
+        fill: $color-dark-10;
+      }
+    }
+  }
 }
