feat: implement select level

--- a/minesweeper/src/styles.scss
+++ b/minesweeper/src/styles.scss
@@ -94,6 +94,10 @@ body {
             font-size: 40px;
             line-height: 47px;
         }
+        &__burger {    
+            width: 48px;
+            height: 48px;
+        }
     }
 }
 
