feat: implement flag counter

--- a/minesweeper/src/components/createField/styles.scss
+++ b/minesweeper/src/components/createField/styles.scss
@@ -17,6 +17,7 @@
   max-width: calc(100vw - 32px) ;
   background-color: $color-dark-10;
   border-radius: $br-l;
+  column-gap: 8px;
 
   padding: 8px;
 
