--- a/minesweeper/src/components/createField/styles.scss
+++ b/minesweeper/src/components/createField/styles.scss
@@ -15,14 +15,14 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  max-width: calc(100vw - 32px) ;
+  max-width: calc(100vw - 32px);
 
   svg {
     fill: $color-dark-10;
     opacity: 0.5;
   }
 
-  &__line{
+  &__line {
 
     display: flex;
     justify-content: space-between;
@@ -44,6 +44,12 @@
     }
   }
 
+  &__wrapper {
+    display: flex;
+    column-gap: 8px;
+  }
+
+
   &__item {
     display: flex;
     align-items: center;
@@ -52,7 +58,6 @@
     border-radius: $br-m;
 
     background-color: $color-dark-60;
-
   }
 
   &__text {
