feat: implement pop-up & change alerts to pop-ups

--- a/minesweeper/src/styles/tokens.scss
+++ b/minesweeper/src/styles/tokens.scss
@@ -17,6 +17,7 @@ $color-gradient: linear-gradient(135deg, #FFD84C 0%, #F7AE2F 100%);
 // Border radius
 $br-m: 4px;
 $br-l: 8px;
+$br-xl: 16px;
 
 // Text
 @mixin text-m {
