--- a/minesweeper/src/styles/tokens.scss
+++ b/minesweeper/src/styles/tokens.scss
@@ -15,6 +15,7 @@ $color-gradient: linear-gradient(135deg, #FFD84C 0%, #F7AE2F 100%);
 
 
 // Border radius
+$br-s: 2px;
 $br-m: 4px;
 $br-l: 8px;
 $br-xl: 16px;
