--- a/migration-newip-to-ts/src/components/view/sources/sources.css
+++ b/migration-newip-to-ts/src/components/view/sources/sources.css
@@ -1,19 +1,42 @@
 .sources {
     display: flex;
+    flex-direction: column;
     flex-wrap: nowrap;
-    width: 100%;
-    height: 120px;
+    row-gap: 16px;    
+    align-items: start;
+
+    position: absolute;
     overflow: auto;
-    align-items: center;
+
+    width: 320px;
+    height: 100%;
+    padding: 0 16px;
+    
     font: 300 1em 'Fira Sans', sans-serif;
+
+    border-right: solid 1px #30c5ff;
+    z-index: 99;
+    background-color: #17181c;
+}
+
+.sources h3{
+    position: sticky;
+    top: 0px;
+    background-color: #17181c;
+
+    margin: 0;
+    padding: 16px 0;
+    width: 100%;
+    z-index: 100;
 }
 
 .source__item {
+    width: 100%;
     background: none;
+    background-color: #17181c;
     border: 2px solid #30c5ff;
     font: inherit;
     line-height: 1;
-    margin: 0.5em;
     padding: 1em 2em;
     color: #70d6ff;
     transition: 0.25s;
@@ -31,4 +54,18 @@
 .source__item-name {
     font-weight: 400;
     white-space: nowrap;
+}
+
+@media (max-width: 864px) {
+    .sources {
+        display: none;
+        width: 100%;
+        height: 100%;
+        overflow: visible;
+        border-right: none;
+    }
+    .visible {
+        display: flex;
+    }
+
 }
