feat: add header view

--- a/RSS-CSS-Selectors/src/styles/styles.scss
+++ b/RSS-CSS-Selectors/src/styles/styles.scss
@@ -2,5 +2,9 @@
 @import "./tokens.scss";
 
 body {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+  padding: 16px;
   background-color: $color-neutral-40;
 }
