--- a/RSS-CSS-Selectors/src/components/view/main/demo/demo.scss
+++ b/RSS-CSS-Selectors/src/components/view/main/demo/demo.scss
@@ -59,6 +59,10 @@ tulip {
   position: relative;
   display: flex;
 
+  width: 100%;
+  & svg {
+    width: 100%;
+  }
   &:hover {
     filter: drop-shadow(0px 0px 4px $color-brown-60) drop-shadow(0px 0px 8px $color-brown-60);
   }
