refactor: add block wrapper for HTML text viewer

--- a/RSS-CSS-Selectors/src/components/view/main/editors/editors.scss
+++ b/RSS-CSS-Selectors/src/components/view/main/editors/editors.scss
@@ -133,7 +133,8 @@
   & .classes {
     color: $color-brown-80;
   }
-  &:hover * {
-    color: $color-neutral-80;
-  }
+}
+
+.block:hover * {
+  color: $color-neutral-80;
 }
