--- a/RSS-CSS-Selectors/src/components/view/main/demo/demo.scss
+++ b/RSS-CSS-Selectors/src/components/view/main/demo/demo.scss
@@ -63,7 +63,16 @@ tulip {
   & svg {
     width: 100%;
   }
-  &:hover {
+  // &:hover {
+  //   filter: drop-shadow(0px 0px 4px $color-brown-60) drop-shadow(0px 0px 8px $color-brown-60);
+  // }
+  &::after {
+    content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+  }
+  &.hovered {
     filter: drop-shadow(0px 0px 4px $color-brown-60) drop-shadow(0px 0px 8px $color-brown-60);
   }
 }
