--- a/RSS-CSS-Selectors/src/components/view/main/demo/demo.scss
+++ b/RSS-CSS-Selectors/src/components/view/main/demo/demo.scss
@@ -63,17 +63,37 @@ tulip {
   & svg {
     width: 100%;
   }
-  // &:hover {
-  //   filter: drop-shadow(0px 0px 4px $color-brown-60) drop-shadow(0px 0px 8px $color-brown-60);
-  // }
   &::after {
     content: "";
       position: absolute;
       width: 100%;
       height: 100%;
   }
+
   &.hovered {
+    z-index: 10;
     filter: drop-shadow(0px 0px 4px $color-brown-60) drop-shadow(0px 0px 8px $color-brown-60);
+    &::before {
+      content: attr(data-tag);
+      position: absolute;
+      top: -40px;
+      left: calc(50% - 72px);
+      z-index: 10;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      width: 144px;
+      padding: 4px 8px;
+      border-radius: $br-m;
+  
+      background-color: $color-neutral-60;
+      border: solid 2px $color-neutral-40;
+      color: $color-neutral-80;
+      text-align: center;
+  
+    }
   }
 }
 
