--- a/RSS-CSS-Selectors/src/components/view/main/editors/editors.scss
+++ b/RSS-CSS-Selectors/src/components/view/main/editors/editors.scss
@@ -6,8 +6,15 @@
   padding: 16px;
   border-radius: $br-l;
   background-color: $color-neutral-80;
+  &.wrong {
+    animation: shake 0.5s ease;
+  }
 }
-
+@keyframes shake {
+	0%, 100% {transform: translateX(0);}
+	10%, 45%, 80% {transform: translateX(-8px);}
+	20%, 60% {transform: translateX(8px);}
+}
 .editors-wrapper {
   display: flex;
   height: 100%;
