fix: aside width

--- a/RSS-CSS-Selectors/src/components/view/main/aside/aside.scss
+++ b/RSS-CSS-Selectors/src/components/view/main/aside/aside.scss
@@ -1,6 +1,7 @@
 @import "../../../../styles/tokens.scss";
 
 aside {
+  flex-shrink: 0;
   display: flex;
   flex-direction: column;
   row-gap: 8px;
